Prevent line break in read-more

--- a/templates-scss/_partials/_base.scss
+++ b/templates-scss/_partials/_base.scss
@@ -33,6 +33,11 @@
   .testimonial-field-before {
     margin-right: 0.5em;
   }
+
+  a.readmore,
+  span.readmore-toggle {
+    white-space: nowrap;
+  }
 }
 
 .strong-view {
