--- a/templates/bold/content.css
+++ b/templates/bold/content.css
@@ -54,6 +54,10 @@ Thanks https://css-tricks.com/minimum-paragraph-widths/
 .strong-view.bold .testimonial-field-before {
   margin-right: 0.5em;
 }
+.strong-view.bold a.readmore,
+.strong-view.bold span.readmore-toggle {
+  white-space: nowrap;
+}
 
 .strong-view.slider-container {
   opacity: 1;
